Changed the way textures are loaded, as well as added some textures by musti

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,8 @@ add_executable(TimeWarriorV2
         Objects/ActivateAble/SlidingDoor.h
         CollisionController.cpp
         CollisionController.h
+        TimeWarriorTexture.h
+        Util.h
 )
 
 target_link_libraries(TimeWarriorV2 PUBLIC
