--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,6 +18,8 @@ add_executable(TimeWarriorV2
         CollisionController.h
         TimeWarriorTexture.h
         Util.h
+        Texture/TextureLoader.cpp
+        Texture/TextureLoader.h
 )
 
 target_link_libraries(TimeWarriorV2 PUBLIC
