Moved some functions into a new RoomCreator class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,8 @@ add_executable(TimeWarriorV2
         Util.h
         Texture/TextureLoader.cpp
         Texture/TextureLoader.h
+        RoomCreator.cpp
+        RoomCreator.h
 )
 
 target_link_libraries(TimeWarriorV2 PUBLIC
